--- a/resume/index.html
+++ b/resume/index.html
@@ -159,7 +159,7 @@
                                 <p>서로 다른 플랫폼의 데이터를 <span class="split">한 곳에 저장하도록 하였습니다.</span></p>
                                 <p>크롬 확장 프로그램 팝업을 통해 어느 페이지에서든 </p>
                                 <p>콘텐츠 시청 페이지로 바로 이동할 수 있게 됩니다.</p>
-                                <p>기획, 설계, 배포 등 전반적인 프로세스를 경험해봤습니다.</p>
+                                <p>기획, 설계, 배포 등 전반적인 프로세스를 경험했습니다.</p>
                                 <ul class="flex-col">
                                     <li>
                                         <img src="./image/webstore.png" class="icons" alt="크롬 웹 스토어">
@@ -200,7 +200,7 @@
                                     WYSIWYG 에디터와 CMS 를 대체하여 <span class="split">MDX를 사용했고,</span> 
                                 </p>
                                 <p>MDX page 라우팅 편의와 SSG를 위해 <span class="split">Next.js 를 활용했습니다.</span></p>
-                                
+                                <p>Vercel 을 통해 배포하고 운영하고 있습니다.</p>
                                 <ul class="flex-col">
                                     <li>
                                         <a href="https://imallears.kr" class="link" >
