--- a/resume/index.html
+++ b/resume/index.html
@@ -76,7 +76,7 @@
                                     <div class="flex-row">
                                         <img src="./image/javascript.png" class="icons" alt="javascript">
                                     </div>
-                                    <h4>Javascript</h4>
+                                    <h4>JavaScript</h4>
                                     <ul>
                                         <li>
                                             ES5, ES6
@@ -194,7 +194,7 @@
                                 </p>
                                 <p>타입 명시와 재사용 가능한 컴포넌트<span class="split">의 필요성을 느꼈고</span></p>
                                 <p>
-                                    Typescript, React 를 사용해서 <span class="split">프로젝트를 진행했습니다.</span>
+                                    TypeScript, React 를 사용해서 <span class="split">프로젝트를 진행했습니다.</span>
                                 </p>
                                 <p>
                                     WYSIWYG 에디터와 CMS 를 대체하여 <span class="split">MDX를 사용했고,</span> 
