--- a/resume/index.html
+++ b/resume/index.html
@@ -190,7 +190,7 @@
                                     <h3>개인 블로그</h3>
                                 </div>
                                 <p>
-                                    랜딩 페이지, 포트폴리오 페이지<span class="split">등을 만들어보면서</span> 
+                                    여러 페이지를 만들어보면서 
                                 </p>
                                 <p>타입 명시와 재사용 가능한 컴포넌트<span class="split">의 필요성을 느꼈고</span></p>
                                 <p>
