--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
                             <p>생소한 기술이더라도 공식 문서를 읽고 적용하여 <span class="split">문제를 해결할 수 있습니다.</span></p> 
                             <p>새로운 기술을 접할 때, <span class="split">기술이 도입된 배경이 된 문제를 </span><span class="split">어떻게 해결했을지 호기심을 가지고</span> </p>
                             <p>내부적으로 어떻게 동작하는지 탐구해보는 걸 좋아합니다.</p>
-                            <p>다양한 사람들과 함께 서비스를 개발하며 <span class="split">성장하고 싶습니다.</span></p>
+                            <p>다양한 사람들과 함께 서비스를 개발하며 <span class="split">성장하고 싶습니다</span></p>
                         </div>
                         
                         <div class="edu">
@@ -94,16 +94,19 @@
                                         <img src="./image/reactrouter.png" class="icons" alt="react-router">
                                         <img src="./image/react-query.png" class="icons" alt="react-query">
                                     </div>
-                                    <h4>SPA</h4>
+                                    <h4>CSR, SPA</h4>
                                     <ul>
                                         <li>
                                             react, react-router, react-query
                                         </li>
                                         <li>
-                                            재사용 가능한 컴포넌트 구현
+                                            React를 사용하여 재사용 가능한 컴포넌트 구현
                                         </li>
                                         <li>
                                             커스텀 훅을 통한 비즈니스 로직 재사용
+                                        </li>
+                                        <li>
+                                            react-query를 활용한 비동기 데이터 상태관리
                                         </li>
                                     </ul>
                                 </li>
