--- a/resume/index.html
+++ b/resume/index.html
@@ -100,7 +100,7 @@
                                             react, react-router, react-query
                                         </li>
                                         <li>
-                                            React를 사용하여 재사용 가능한 컴포넌트 구현
+                                            React를 사용한 재사용 가능한 컴포넌트 구현
                                         </li>
                                         <li>
                                             커스텀 훅을 통한 비즈니스 로직 재사용
@@ -152,16 +152,19 @@
                                     <h3>통합 콘텐츠 관리를 위한 크롬 익스텐션</h3>
                                 </div>
                                 <p>
-                                    HTML, CSS, JavaScript를 <span class="split">활용해서</span>
+                                    <span class="split">일상에서의 불편함을</span> 해소하기 위해 다양한 OTT 플랫폼의 콘텐츠를
                                 </p>
                                 <p>
-                                    <span class="split">일상에서의 불편함을</span> 해소하기 위해 개발했습니다.
+                                    한 곳에서 볼 수 있도록 개발했습니다.
                                 </p>
-                                <p>OTT 플랫폼의 웹 페이지에 접근 시 <span class="split">콘텐츠 카드 요소에 추가되는 버튼을 통해</span> </p>
-                                <p>서로 다른 플랫폼의 데이터를 <span class="split">한 곳에 저장하도록 하였습니다.</span></p>
-                                <p>크롬 확장 프로그램 팝업을 통해 어느 페이지에서든 </p>
-                                <p>콘텐츠 시청 페이지로 바로 이동할 수 있게 됩니다.</p>
-                                <p>기획, 설계, 배포 등 전반적인 프로세스를 경험했습니다.</p>
+                                <p>
+                                    HTML, CSS, JavaScript 을 활용해 <span class="split">크롬 익스텐션을 개발했고</span>
+                                </p>
+                                <p>MutationObserver API를 활용하여 비동기적으로 업데이트되는 DOM을 인식하여</p>
+                                <p>OTT 플랫폼 페이지의 <span class="split">카드 요소에 버튼을 추가하도록 했습니다.</span> </p>
+                                <p>service-worker를 활용하여 데이터 로드를 미리 처리했고,</span></p>
+                                <p>대략 200ms 의 지연 시간을 줄일 수 있었습니다.</p>
+                                <p>기획과 설계를 포함하여 구현했고 크롬 웹 스토어를 통해 배포했습니다.</p>
                                 <ul class="flex-col">
                                     <li>
                                         <img src="./image/webstore.png" class="icons" alt="크롬 웹 스토어">
