--- a/resume/index.html
+++ b/resume/index.html
@@ -199,7 +199,7 @@
                                 </p>
                                 <p>타입 명시와 재사용 가능한 컴포넌트<span class="split">의 필요성을 느꼈고</span></p>
                                 <p>
-                                    Typescript, React 를 사용해서 <span class="split">프로젝트를 진행했습니다.</span>
+                                    TypeScript, React 를 사용해서 <span class="split">프로젝트를 진행했습니다.</span>
                                 </p>
                                 <p>
                                     WYSIWYG 에디터와 CMS 를 대체하여 <span class="split">MDX를 사용했고,</span> 
@@ -221,7 +221,7 @@
         </main>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-              new TypeIt("#type", {speed:70}).move(-1).pause(200).go();
+              //new TypeIt("#type", {speed:70}).move(-1).pause(200).go();
               ScrollOut({
                 targets: "#project",
                 offset: 400
