--- a/resume/index.html
+++ b/resume/index.html
@@ -15,11 +15,12 @@
                     <div class="profile">
                         <h1>기진석</h1>
                         <div id="type">
-                            <p>문제를 해결할 수 있는 도구를 찾아서</p>
-                            <p>생소한 기술이더라도 공식 문서를 읽고 적용하여 <span class="split">문제를 해결할 수 있습니다.</span></p> 
-                            <p>새로운 기술을 접할 때, <span class="split">기술이 도입된 배경이 된 문제를 </span><span class="split">어떻게 해결했을지 호기심을 가지고</span> </p>
-                            <p>내부적으로 어떻게 동작하는지 탐구해보는 걸 좋아합니다.</p>
-                            <p>다양한 사람들과 함께 서비스를 개발하며 <span class="split">성장하고 싶습니다</span></p>
+                            <p>깊이 생각한 후에 문제를 정의내리고</p>
+                            <p>해결할 수 있는 도구를 찾아서 활용할 수 있습니다.</p>
+                            <p>생소한 기술이더라도 공식 문서를 읽고 습득하여 문제를 해결합니다.</p> 
+                            <p>그러한 과정에서 기술이 도입된 배경과</p>
+                            <p>내부 동작에 관심을 갖고 탐구하는 걸 좋아합니다.</p>
+                            <p>정보의 바다에서 함께 헤엄쳐나갈 유쾌한 동료들과 함께하고 싶습니다.</p>
                         </div>
                         
                         <div class="edu">
