--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,7 @@
                             <p>생소한 기술이더라도 공식 문서를 읽고 습득하여 문제를 해결합니다.</p> 
                             <p>그러한 과정에서 기술이 도입된 배경과</p>
                             <p>내부 동작에 관심을 갖고 탐구하는 걸 좋아합니다.</p>
-                            <p>정보의 바다에서 함께 헤엄쳐나갈 유쾌한 동료들과 함께하고 싶습니다.</p>
+                            <p>정보의 바다에서 함께 헤엄쳐나갈 유쾌한 동료들과 함께하고 싶습니다</p>
                         </div>
                         
                         <div class="edu">
@@ -222,7 +222,7 @@
         </main>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-              new TypeIt("#type", {speed:70}).move(-1).pause(200).go();
+              new TypeIt("#type", {speed:33}).move(-1).pause(200).go();
               ScrollOut({
                 targets: "#project",
                 offset: 400
