--- a/resume/index.html
+++ b/resume/index.html
@@ -222,7 +222,7 @@
         </main>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
-              new TypeIt("#type", {speed:33}).move(-1).pause(200).go();
+              new TypeIt("#type", {speed:33}).go();
               ScrollOut({
                 targets: "#project",
                 offset: 400
