--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,7 @@
                         <div id="type">
                             <p>깊이 생각한 후에 문제를 정의내리고</p>
                             <p>해결할 수 있는 도구를 찾아서 활용할 수 있습니다.</p>
-                            <p>생소한 기술이더라도 공식 문서를 읽고 습득하여 문제를 해결합니다.</p> 
+                            <p>생소한 기술이더라도 공식 문서를 읽고 습득하여 <span class="split">문제를 해결합니다.</span></p> 
                             <p>그러한 과정에서 기술이 도입된 배경과</p>
                             <p>내부 동작에 관심을 갖고 탐구하는 걸 좋아합니다.</p>
                             <p>정보의 바다에서 함께 헤엄쳐나갈 유쾌한 동료들과 함께하고 싶습니다</p>
