--- a/resume/index.html
+++ b/resume/index.html
@@ -20,6 +20,8 @@
                             <p>생소한 기술이더라도 공식 문서를 읽고 습득하여 <span class="split">문제를 해결합니다.</span></p> 
                             <p>그러한 과정에서 기술이 도입된 배경과</p>
                             <p>내부 동작에 관심을 갖고 탐구하는 걸 좋아합니다.</p>
+                            <p>프로젝트 전반에 걸쳐 다양한 지식도 필요하다고 생각하고</p>
+                            <p>자료구조, 알고리즘 및 데이터베이스에 대한 <span class="split">공부도 소홀히 하지 않고 있습니다.</span></p>
                         </div>
                         
                         <div class="edu">
