--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
                 <section id="about">
                     <div class="profile">
                         <h1 id="type">기진석</h1>
-                        <div>
+                        <div style="margin:1rem 0">
                             <p>깊이 생각한 후에 문제를 정의내리고</p>
                             <p>해결할 수 있는 도구를 찾아서 활용할 수 있습니다.</p>
                             <p>생소한 기술이더라도 공식 문서를 읽고 습득하여 <span class="split">문제를 해결합니다.</span></p> 
