--- a/resume/index.html
+++ b/resume/index.html
@@ -141,7 +141,7 @@
                 <section id="project">
                     <div class="flex-center">
                         <div class="h2">
-                            <h2>프로젝트</h2>
+                            <h2>개인 프로젝트</h2>
                         </div>
                         
                         <div class="grid">
