--- a/resume/index.html
+++ b/resume/index.html
@@ -223,11 +223,11 @@
         <script>
             document.addEventListener("DOMContentLoaded", function () {
             //   new TypeIt("#type", {speed:33}).go();
-              ScrollOut({
-                targets: "#project",
-                offset: 400
-              });
-            });
+            //   ScrollOut({
+            //     targets: "#project",
+            //     offset: 400
+            //   });
+            // });
           </script>
     </body>
 </html>
