--- a/resume/index.html
+++ b/resume/index.html
@@ -86,16 +86,30 @@
                                     <div class="flex-row">
                                         <img src="./image/javascript.png" class="icons" alt="javascript">
                                     </div>
-                                    <h4>Javascript</h4>
+                                    <h4>Javascript </h4>
                                     <ul>
                                         <li>
                                             ES5, ES6
                                         </li>
                                         <li>
-                                            클로저
+                                            함수형 프로그래밍
                                         </li>
                                         <li>
                                             비동기 처리
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="grid-col-3-inner">
+                                    <div class="flex-row">
+                                        <img src="./image/typescript.png" class="icons" alt="typescript">
+                                    </div>
+                                    <h4>TypeScript</h4>
+                                    <ul>
+                                        <li>
+                                            타입 명시
+                                        </li>
+                                        <li>
+                                            OOP에 대한 기본적인 이해
                                         </li>
                                     </ul>
                                 </li>
@@ -105,7 +119,7 @@
                                         <img src="./image/reactrouter.png" class="icons" alt="react-router">
                                         <img src="./image/react-query.png" class="icons" alt="react-query">
                                     </div>
-                                    <h4>CSR, SPA</h4>
+                                    <h4>CSR · SPA</h4>
                                     <ul>
                                         <li>
                                             react, react-router, react-query
@@ -125,7 +139,7 @@
                                     <div class="flex-row">
                                         <img src="./image/nextjs.png" class="icons" alt="Next.js">
                                     </div>
-                                    <h4>SSG, SSR</h4>
+                                    <h4>SSG · SSR</h4>
                                     <ul>
                                         <li>
                                             Next.js 13
@@ -169,11 +183,11 @@
                                 <ul class="indented">
                                     <li>
                                         <p>
-                                            HTML, CSS, JavaScript 을 활용해 <span class="split">크롬 익스텐션 개발</span>
+                                            HTML, CSS, JavaScript 을 활용하여 <span class="split">크롬 익스텐션 개발</span>
                                         </p>
                                     </li>
                                     <li>
-                                        <p>MutationObserver API활용하여</p>
+                                        <p>MutationObserver API 를 통해</p>
                                         <p>웹 페이지에서 비동기적으로 추가되는 <span class="split">카드 요소 인식</span> </p>
                                     </li>
                                     <li>
