--- a/resume/index.html
+++ b/resume/index.html
@@ -160,11 +160,151 @@
                     </div>
                 </section>
                 <section id="project">
-                    <div class="flex-center">
-                        <div class="h2">
-                            <h2>개인 프로젝트</h2>
+                    <div class="h2">
+                        <h2>프로젝트</h2>
+                    </div>
+                    <div class="flex-center"> 
+                        <div class="h3">
+                            <h3>다모아</h3>
+                            <p>기간 : 2023.09 ~ 2023.12</p>
+                            <p>규모 : 4인 팀 프로젝트</p>
+                            <p>역할 : 팀장</p>
                         </div>
-                        
+                        <div class="grid">
+                            <div>
+                                <img class="ld" src="./image/extension.PNG" alt="watchmark">
+                                <img class="md" src="./image/extension.PNG" alt="watchmark">
+                            </div>
+                            <div class="projects grow-3">
+                                <p>
+                                    다양한 OTT 플랫폼의 콘텐츠를 한 곳에서 관리하고,
+                                    시청 페이지에 편리하게 접근하기 위해 개발했습니다.
+                                    찜한 콘텐츠의 연관 콘텐츠를 추천받고 관심 콘텐츠를 사용자 편의대로 그룹화할 수 있습니다.
+                                </p>
+                                <p>
+                                    세가지 항목으로 나누어서 구현했습니다.
+                                </p>
+                                <ul class="indented">
+                                    <li>
+                                            크롬 익스텐션 
+                                    </li>
+                                    <li>
+                                        DB 관리 및 연관 콘텐츠 추천 서비스 서버
+                                    </li>
+                                    <li>
+                                        관리자 페이지
+                                    </li>
+                                </ul>
+                                <h4>팀장으로 기여한 부분</h4>
+                                <p>다음 역할을 맡아 프로젝트를 진행했습니다.</p>
+                                <ol class="indented">
+                                    <li>문서 작성 및 파일 관리</li>
+                                    <li>스케줄 관리 및 토의 주도</li>
+                                    <li>화면 설계 및 구현</li>
+                                    <li>DB 및 API 설계</li>
+                                    <li>
+                                        크롬 익스텐션 구현
+                                    </li>
+                                    <li>
+                                        추천 시스템 구현
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-center"> 
+                        <div class="h4">
+                            <h4>화면 설계 및 구현</h4>
+                        </div>
+                        <div class="grid">
+                            <div class="img_container">
+                                <div>
+                                    <img class="ld" src="./image/figma.PNG" alt="화면 설계 예시">
+                                    <img class="md" src="./image/figma.PNG" alt="화면 설계 예시">
+                                </div>
+                                <div>
+                                    <img class="ld" src="./image/화면설계예시.PNG" alt="화면 설계 예시">
+                                    <img class="md" src="./image/화면설계예시.PNG" alt="화면 설계 예시">
+                                </div>
+                            </div>
+                            
+                            <div class="projects grow-3">
+                                <p>
+                                    구현하기 앞서 Figma를 사용하여 미리 시안과 화면 설계를 준비했습니다.
+                                </p>
+                                <p>
+                                    팀 내 토의를 거쳐 반영할 기능을 정하고, 피그마로 시각화해보며 의견을 모아 수정사항을 공유했고, 구현에 반영했습니다.
+                                </p>
+                                <p>
+                                    프로젝트 진행 과정에서 지속적으로 피드백을 진행했고, 수정 사항이 반영될 때마다 Figma 시안 수정, 시안 공유 및 피드백, 피드백 반영, 최종적으로 구현에 반영하는 과정을 거쳤습니다.
+                                </p>
+                                <p>
+                                    준비된 시안을 바탕으로 크롬 익스텐션 및 관리자 페이지의 화면을 구현했습니다.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex-center"> 
+                        <div class="h4">
+                            <h4>DB 및 API 설계</h4>
+                        </div>
+                        <div class="grid">
+                            <div class="img_container">
+                                <div>
+                                    <img class="ld" src="./image/api설계.PNG" alt="화면 설계 예시">
+                                    <img class="md" src="./image/api설계.PNG" alt="화면 설계 예시">
+                                </div>
+                                <div>
+                                    <img class="ld" src="./image/DB설계.PNG" alt="화면 설계 예시">
+                                    <img class="md" src="./image/DB설계.PNG" alt="화면 설계 예시">
+                                </div>
+                            </div>
+                            <div class="projects grow-3">
+                                <p>
+                                    서비스를 위해 다양한 종류의 데이터가 필요하기 때문에 미리 ERD 와 테이블 상세를 준비했고, 어떻게
+                                    중복되는 속성없이 테이블을 구성할지 고민했습니다.
+                                </p>
+                                <p>
+                                    인덱싱을 활용하여 자주 접근되는 속성에 대한 검색 속도를 높였습니다.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-center"> 
+                        <div class="h4">
+                            <h4>추천 시스템 구현</h4>
+                        </div>
+                        <div class="grid">
+                            <div class="img_container">
+                                <div>
+                                    <img class="ld" src="./image/관리자페이지.PNG" alt="화면 설계 예시">
+                                    <img class="md" src="./image/관리자페이지.PNG" alt="화면 설계 예시">
+                                </div>
+                            </div>
+                            <div class="projects grow-3">
+                                <p>
+                                    크롤링을 통해 확보한 데이터와 Movielens에서 제공해주는 데이터를 활용했습니다.
+                                </p>
+                                <p>
+                                    BeautifulSoup 과 Selenium 을 활용해서 JustWatch 페이지에서 데이터를 구했습니다.
+                                </p>
+                                <p>
+                                    웹 소켓을 활용하여 관리자 페이지에서 실시간으로 학습 진행도를 관찰할 수 있게했고,
+                                    데이터 전처리 및 학습을 관리자 페이지를 통해 진행할 수 있도록 했습니다.
+                                </p>
+                                <p>
+                                    pytorch 라이브러리와 numpy 의 기본 연산을 활용하여 구현했습니다.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-center"> 
+                        <div class="h3">
+                            <h3>통합 콘텐츠 관리를 위한 크롬 익스텐션 개선 작업</h3>
+                            <p>규모 : 개인 프로젝트</p>
+                            <p>기간 : 2024.01 ~ 2023.02</p>
+                        </div>
                         <div class="grid">
                             <div>
                                 <img class="ld" src="./image/watchmark.png" alt="watchmark">
