--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,6 @@
                         <div style="margin:1rem">
                             <ul class="indented">
                                 <li>RESTful API 및 기타 HTTP API 를 사용할 수 있습니다.</li>
-                                <li>자주 사용되는 속성에 인덱싱을 적용한 DB를 설계한 경험이 있습니다.</li>
                                 <li>API를 설계하여 Swagger 를 통해 공유하고, 협업한 경험이 있습니다.</li>
                             </ul>
                         </div>
@@ -268,6 +267,14 @@
                                 <p>
                                     인덱싱을 활용하여 자주 접근되는 속성에 대한 검색 속도를 높였습니다.
                                 </p>
+                                <p>
+                                    API를 설계하는 과정에서 어떤 종류의 데이터를 주고받아야 하는지 고민했고,
+                                    서버와의 데이터 일관성 문제에 대해 고민했습니다.
+                                </p>
+                                <p>
+                                    외관적으로는 버튼 하나를 추가하는 것이 단순하지만, 그 안에서 꽤 많은 종류의 데이터가 오가고
+                                    생각해보아야 할 점이 많다는 것을 배우게 됐습니다.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -312,7 +319,7 @@
                             </div>
                             <div class="projects grow-3">
                                 <p>
-                                    이전 팀 프로젝트에서 확장 프로그램 부분을 더 간결하게 수정하고, 여러 버그와 데이터 로드 속도 향상을 위한 작업을 진행했습니다.
+                                    이전 팀 프로젝트에서 확장 프로그램 부분을 더 간결하게 수정하고, 여러 버그와 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
                                 </p>
                                 <ul class="indented">
                                     <li>
@@ -326,8 +333,8 @@
                                         
                                     </li>
                                     <li>
-                                        service-worker를 활용하여 데이터 로드를 사전에 처리
-                                        <p>대략 200ms 의 네트워크 지연없이 화면에 데이터를 보여줄 수 있었습니다.</p>
+                                        <a href="https://www.imallears.kr/posts/watchmark" style="color:#4c00ff">service-worker를 활용하여 데이터 로드를 사전에 처리</a>
+                                        <p>데이터 요청 응답시간으로 인한 네트워크 지연(대략 200ms) 없이 화면에 데이터를 보여줄 수 있었습니다.</p>
                                     </li>
                                 </ul>
                                 
