--- a/resume/index.html
+++ b/resume/index.html
@@ -328,7 +328,7 @@
                                         
                                     </li>
                                     <li>
-                                        <a href="https://www.imallears.kr/posts/watchmark" style="color:#4c00ff"></a>
+                                        <a href="https://www.imallears.kr/posts/watchmark" style="color:#4c00ff">
                                             데이터 정합성을 위해 전반적인 프로세스 개선
                                         </a>
                                     </li>
