--- a/resume/index.html
+++ b/resume/index.html
@@ -269,6 +269,7 @@
                                 <p> 관리자 페이지: Bootstrap 템플릿 위에 HTML, CSS, Javascript 를 활용해서 구현했습니다.</p>
                                 <ul class="indented">
                                     <p>구현 기능</p>
+                                    <li>관심 콘텐츠 추가/제거</li>
                                     <li>로그인/로그아웃 기능</li>
                                     <li>신규 카테고리 생성 및 삭제</li>
                                     <li>카테고리별 콘텐츠 분류</li>
