--- a/resume/index.html
+++ b/resume/index.html
@@ -279,7 +279,7 @@
                                     <li>신규 카테고리 생성 및 삭제</li>
                                     <li>카테고리별 콘텐츠 분류</li>
                                     <li>연관 콘텐츠 조회</li>
-                                    <li>OTT 플랫폼 별 조회</li>
+                                    <li>OTT 플랫폼별 찜한 콘텐츠 조회</li>
                                 </ul>
                             </div>
                         </div>
