--- a/resume/index.html
+++ b/resume/index.html
@@ -21,8 +21,8 @@
                             <p>그러한 과정에서 기술이 도입된 배경과</p>
                             <p>내부 동작에 관심을 갖고 탐구하는 걸 좋아합니다.</p>
                             <p>프로젝트 전반에 걸쳐 <span class="split">다양한 지식이 필요하다고 생각하고</span></p>
-                            <p>자료구조, 알고리즘 및 데이터베이스에 대한 <span class="split">공부도 소홀히 하지 않고 있습니다.</span></p>
-                            <p>인터랙티브 UI 와 데이터 시각화에 관심이 있어서</p>
+                            <p>자료구조, 알고리즘 및 데이터베이스에 대한 <span class="split">공부를 꾸준히 하고 있습니다.</span></p>
+                            <p>인터랙티브 UI와 데이터 시각화에 관심이 있어서</p>
                             <p>프론트 엔드 직무를 선택하게 되었습니다.</p>
                         </div>
                         
