--- a/resume/index.html
+++ b/resume/index.html
@@ -247,10 +247,10 @@
                                 <div class="projects grow-3">
                                     <p>
                                         구현에 앞서 ERD 와 테이블 상세를 준비했고, 어떻게
-                                        중복되는 속성없이 테이블을 구성할지 고민했습니다.
+                                        테이블을 구성할지 고민했습니다.
                                     </p>
                                     <p>
-                                        프라이머리 키를 잘 선택해야함을 몸소 느꼈고, 적절히 복합키를 선택했습니다. 인덱싱을 활용하여 자주 접근하는 속성에 대한 검색 속도를 높였습니다.
+                                        프라이머리 키를 잘 선택해야함을 몸소 느꼈고, 적절히 복합키를 선택했습니다. 인덱싱을 활용하여 자주 접근하는 컬럼에 대한 검색 속도를 높였습니다.
                                     </p>
                                     <p>
                                         API를 설계하는 과정에서 어떤 종류의 데이터를 주고받아야 하는지 고민했고,
