--- a/resume/index.html
+++ b/resume/index.html
@@ -330,7 +330,6 @@
                     <div class="flex-center"> 
                         <div class="h3">
                             <h3>다모아 개선 작업</h3>
-                            <p>개인 프로젝트</p>
                             <p>기간 : 2024.01 ~ 2024.02</p>
                         </div>
                         <div class="grid">
@@ -340,9 +339,9 @@
                             </div>
                             <div class="projects grow-3">
                                 <p>
-                                    이전 팀 프로젝트 구성 중 크롬 확장 프로그램 부분을 개선하기 위한 프로젝트입니다.</p>
+                                    이전 팀 프로젝트 구성 중 크롬 확장 프로그램 부분을 개선하기 위한 프로젝트입니다. </p>
                                 <p>
-                                    코드 리팩토링 및 버그 수정, 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
+                                    불필요한 기능은 제외하고 코드 리팩토링 및 버그 수정, 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
                                 </p>
                                 <ul class="indented">
                                     <li>
@@ -425,13 +424,13 @@
             </div>
         </main>
         <script>
-            //document.addEventListener("DOMContentLoaded", function () {
+            document.addEventListener("DOMContentLoaded", function () {
             //   new TypeIt("#type", {speed:33}).go();
-            //   ScrollOut({
-            //     targets: "#project",
-            //     offset: 400
-            //   });
-            // });
+            ScrollOut({
+                 targets: "#project",
+                 offset: 400
+               });
+            });
           </script>
     </body>
 </html>
