--- a/resume/index.html
+++ b/resume/index.html
@@ -329,7 +329,8 @@
                     </div>
                     <div class="flex-center"> 
                         <div class="h3">
-                            <h3>다모아 개선 작업</h3>
+                            <h3>개선 작업</h3>
+                            <p>개인 프로젝트</p>
                             <p>기간 : 2024.01 ~ 2024.02</p>
                         </div>
                         <div class="grid">
