--- a/resume/index.html
+++ b/resume/index.html
@@ -424,13 +424,13 @@
             </div>
         </main>
         <script>
-            document.addEventListener("DOMContentLoaded", function () {
+            //document.addEventListener("DOMContentLoaded", function () {
             //   new TypeIt("#type", {speed:33}).go();
-            ScrollOut({
-                 targets: "#project",
-                 offset: 700
-               });
-            });
+            // ScrollOut({
+            //      targets: "#project",
+            //      offset: 700
+            //    });
+            // });
           </script>
     </body>
 </html>
