--- a/resume/index.html
+++ b/resume/index.html
@@ -127,6 +127,26 @@
                                 </li>
                                 <li class="grid-col-3-inner">
                                     <div class="flex-row">
+                                        <img src="./image/python.png" class="icons" alt="Next.js">
+                                    </div>
+                                    <h4>Python</h4>
+                                    <ul>
+                                        <li>
+                                            FAST API
+                                        </li>
+                                        <li>
+                                            keras
+                                        </li>
+                                        <li>
+                                            pandas
+                                        </li>
+                                        <li>
+                                            pytorch
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="grid-col-3-inner">
+                                    <div class="flex-row">
                                         <img src="./image/aws.png" class="icons" alt="AWS">
                                         <img src="./image/vercel.png" alt="vercel" class="icons">
                                     </div>
