--- a/resume/index.html
+++ b/resume/index.html
@@ -237,6 +237,7 @@
                         <div class="flex-center"> 
                             <div class="h4">
                                 <h4>DB 및 API 설계</h4>
+                                <a href="https://drive.google.com/file/d/1eGHCcoC9jwNe3VPa-NLpQ3fzKeFE-Cnj/view?usp=drive_link" download>설계서</a>
                             </div>
                             <div class="grid">
                                 <div class="img_container">
