--- a/resume/index.html
+++ b/resume/index.html
@@ -222,7 +222,7 @@
                                 <p>다음 역할을 맡아 프로젝트를 진행했습니다.</p>
                                 <ol class="indented">
                                     <li>문서 작성 및 파일 관리</li>
-                                    <li>DB 및 API 설계</li>
+                                    <li>DB 및 API <a href="https://drive.google.com/file/d/1eGHCcoC9jwNe3VPa-NLpQ3fzKeFE-Cnj/view?usp=drive_link" download>설계서</a></li>
                                     <li>
                                         크롬 익스텐션 구현
                                     </li>
@@ -237,7 +237,6 @@
                         <div class="flex-center"> 
                             <div class="h4">
                                 <h4>DB 및 API 설계</h4>
-                                <a href="https://drive.google.com/file/d/1eGHCcoC9jwNe3VPa-NLpQ3fzKeFE-Cnj/view?usp=drive_link" download>설계서</a>
                             </div>
                             <div class="grid">
                                 <div class="img_container">
