--- a/resume/index.html
+++ b/resume/index.html
@@ -132,7 +132,7 @@
                                     <h4>Python</h4>
                                     <ul>
                                         <li>
-                                            FAST API
+                                            Fast API
                                         </li>
                                         <li>
                                             keras
@@ -194,7 +194,6 @@
                                     <img class="ld" src="./image/overview.PNG" alt="watchmark">
                                     <img class="md" src="./image/overview.PNG" alt="watchmark">
                                 </div>
-                                
                             </div>
                             
                             <div class="projects grow-3">
@@ -216,6 +215,12 @@
                                     </li>
                                     <li>
                                         관리자 페이지
+                                    </li>
+                                    <li>
+                                        <img src="./image/github.png" alt="Github" class="icons">
+                                        <a href="https://github.com/d-w-b/damoa" class="link" >
+                                            Github
+                                        </a>
                                     </li>
                                 </ul>
                                 <h4>개인 기여</h4>
