--- a/resume/index.html
+++ b/resume/index.html
@@ -358,7 +358,7 @@
                                         유튜브에서 '뒤로가기' 시에 카드에 버튼이 추가되지 않는 현상 수정
                                     </li>
                                     <li>
-                                        <a href="https://www.imallears.kr/posts/watchmark" style="color:#4c00ff">
+                                        <a href="https://www.imallears.kr/note/watchmark" style="color:#4c00ff">
                                             데이터 정합성을 위해 전반적인 프로세스 개선
                                         </a>
                                     </li>
