--- a/resume/index.html
+++ b/resume/index.html
@@ -351,16 +351,11 @@
                                 <p>
                                     이전 팀 프로젝트 구성 중 크롬 확장 프로그램 부분을 개선하기 위한 프로젝트입니다. </p>
                                 <p>
-                                    불필요한 기능은 제외하고 코드 리팩토링 및 버그 수정, 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
+                                    불필요한 기능은 제외하고 코드 리팩토링 및 오류 수정, 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
                                 </p>
                                 <ul class="indented">
                                     <li>
                                         유튜브에서 '뒤로가기' 시에 카드에 버튼이 추가되지 않는 현상 수정
-                                    </li>
-                                    <li>
-                                        <a href="https://www.imallears.kr/note/watchmark" style="color:#4c00ff">
-                                            데이터 정합성을 위해 전반적인 프로세스 개선
-                                        </a>
                                     </li>
                                     <li>
                                         service-worker를 활용하여 데이터 로드를 사전에 처리
