--- a/resume/index.html
+++ b/resume/index.html
@@ -25,7 +25,7 @@
                         </div> 
                     </div>
                 </section>
-                <section id="skills" data->
+                <section id="skills">
                     <div class="flex-center">
                         <div class="h2">
                             <h2>Skills</h2>
