--- a/resume/index.html
+++ b/resume/index.html
@@ -121,12 +121,12 @@
                 </section>
                 <section id="project">
                     <div class="h2">
-                        <h2>프로젝트</h2>
+                        <h2>포트폴리오</h2>
                     </div>
                     <div class="flex-center"> 
                         <div class="h3">
                             <h3>다모아</h3>
-                            <p>4인 팀 프로젝트</p>
+                            <p>참여 : 4인</p>
                             <p>기간 : 2023.09 ~ 2023.12</p>
                         </div>
                         <div class="grid">
@@ -246,8 +246,7 @@
                     </div>
                     <div class="flex-center"> 
                         <div class="h3">
-                            <h3>개선 작업</h3>
-                            <p>개인 프로젝트</p>
+                            <p>개인 작업</p>
                             <p>기간 : 2024.01 ~ 2024.02</p>
                         </div>
                         <div class="grid">
@@ -257,7 +256,7 @@
                             </div>
                             <div class="projects grow-3">
                                 <p>
-                                    이전 팀 프로젝트 구성 중 크롬 확장 프로그램 부분을 개선하기 위한 프로젝트입니다. </p>
+                                    이전 팀 프로젝트 구성 중 크롬 확장 프로그램 부분을 개선하였습니다. </p>
                                 <p>
                                     불필요한 기능은 제외하고 코드 리팩토링 및 오류 수정, 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
                                 </p>
@@ -285,7 +284,6 @@
                     <div class="flex-center">
                         <div class="h3">
                             <h3>개인 블로그</h3>
-                            <p>개인 프로젝트</p>
                             <p>기간 : 2024.04 - 2024.04</p>
                         </div>
                         <div class="grid">
