--- a/resume/index.html
+++ b/resume/index.html
@@ -130,13 +130,20 @@
                             <p>기간 : 2023.09 ~ 2023.12</p>
                         </div>
                         <div class="grid">
-                            <div class="projects grow-3">
-                                <p>
+                            <div>
+                                 <p>
                                     다양한 OTT 플랫폼의 콘텐츠를 한 곳에서 관리하고,
                                     시청 페이지에 편리하게 접근하기 위해 개발했습니다.
                                     관심 콘텐츠를 사용자 편의대로 카테고리를 나눠 분류할 수 있습니다.
                                 </p>
-                                
+                                <div>
+                                    <img src="./image/github.png" alt="Github" class="icons">
+                                    <a href="https://github.com/d-w-b/damoa" class="link" >
+                                        Github
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="projects grow-3">
                                 <ul class="indented">
                                     <p>
                                         주요 구현 내용
@@ -151,10 +158,7 @@
                                         관리자 페이지
                                     </li>
                                     <li>
-                                        <img src="./image/github.png" alt="Github" class="icons">
-                                        <a href="https://github.com/d-w-b/damoa" class="link" >
-                                            Github
-                                        </a>
+                                        
                                     </li>
                                 </ul>
                                 <h4>역할</h4>
@@ -239,7 +243,7 @@
                     </div>
                     <div class="flex-center"> 
                         <div class="h3">
-                            <p>개인 작업</p>
+                            <p>프론트엔드 리팩토링</p>
                             <p>기간 : 2024.01 ~ 2024.02</p>
                         </div>
                         <div class="grid">
@@ -249,9 +253,12 @@
                             </div>
                             <div class="projects grow-3">
                                 <p>
-                                    이전 팀 프로젝트 구성 중 크롬 확장 프로그램 부분을 개선하였습니다. </p>
+                                    크롬 확장 프로그램 부분을 개선하였습니다. </p>
                                 <p>
-                                    불필요한 기능은 제외하고 코드 리팩토링 및 오류 수정, 사용자가 첫 화면을 응답받는 속도를 향상 시키기 위한 작업을 진행했습니다.
+                                    불필요한 기능은 제외 및 전체적인 구조 개선
+                                </p>
+                                <p>
+                                    첫 화면 응답 속도 향상
                                 </p>
                                 <ul class="indented">
                                     <li>
