--- a/resume/index.html
+++ b/resume/index.html
@@ -131,14 +131,16 @@
                         </div>
                         <div class="grid">
                             <div>
-                                 <p>
+                                <p>
                                     다양한 OTT 플랫폼의 콘텐츠를 한 곳에서 관리하고,
                                     시청 페이지에 편리하게 접근하기 위해 개발했습니다.
+                                </p>
+                                <p>
                                     관심 콘텐츠를 사용자 편의대로 카테고리를 나눠 분류할 수 있습니다.
                                 </p>
                                 <div>
-                                    <img src="./image/github.png" alt="Github" class="icons">
                                     <a href="https://github.com/d-w-b/damoa" class="link" >
+                                        <img src="./image/github.png" alt="Github" class="icons">
                                         Github
                                     </a>
                                 </div>
@@ -157,9 +159,6 @@
                                     <li>
                                         관리자 페이지
                                     </li>
-                                    <li>
-                                        
-                                    </li>
                                 </ul>
                                 <h4>역할</h4>
                                 <p>다음 역할을 맡아 프로젝트를 진행했습니다.</p>
@@ -167,7 +166,7 @@
                                     <li>문서 작성 및 파일 관리</li>
                                     <li>DB 및 API 설계  <a href="https://drive.google.com/file/d/1eGHCcoC9jwNe3VPa-NLpQ3fzKeFE-Cnj/view?usp=drive_link" download style="color:#4c00ff">[설계서 ↗]</a></li>
                                     <li>
-                                        크롬 익스텐션 구현
+                                        크롬 확장 프로그램 구현
                                     </li>
                                 </ul>
                             </div>
