--- a/resume/index.html
+++ b/resume/index.html
@@ -254,7 +254,7 @@
                                 <p>
                                     크롬 확장 프로그램 부분을 개선하였습니다. </p>
                                 <p>
-                                    불필요한 기능은 제외 및 전체적인 구조 개선
+                                    불필요한 기능 제외 및 전체적인 구조 개선
                                 </p>
                                 <p>
                                     첫 화면 응답 속도 향상
@@ -264,8 +264,7 @@
                                         유튜브에서 '뒤로가기' 시에 카드에 버튼이 추가되지 않는 현상 수정
                                     </li>
                                     <li>
-                                        service-worker를 활용하여 데이터 로드를 사전에 처리
-                                        <p>데이터 요청 응답시간으로 인한 네트워크 지연(대략 200ms) 없이 화면에 데이터를 보여줄 수 있었습니다.</p>
+                                        데이터 요청 응답시간으로 인한 네트워크 지연(대략 200ms) 없이 화면에 데이터를 보여줄 수 있었습니다.</p>
                                     </li>
                                 </ul>
                                 
