--- a/resume/index.html
+++ b/resume/index.html
@@ -168,6 +168,9 @@
                                     <li>
                                         크롬 확장 프로그램 구현
                                     </li>
+                                    <li>
+                                        콘텐츠 데이터 처리
+                                    </li>
                                 </ul>
                             </div>
                         </div>
