--- a/resume/index.html
+++ b/resume/index.html
@@ -27,7 +27,7 @@
                 <section id="skills">
                     <div class="flex-center">
                         <div class="h2">
-                            <h2>코딩 경험</h2>
+                            <h2>언어 및 프레임워크</h2>
                         </div>
                         <div>
                             <ul class="grid-col-3">
@@ -126,7 +126,6 @@
                         <div class="h3">
                             <h3>다모아</h3>
                             <p>참여 : 4인</p>
-                            <p>기간 : 2023.09 ~ 2023.12</p>
                         </div>
                         <div class="grid">
                             <div>
@@ -246,7 +245,7 @@
                     </div>
                     <div class="flex-center"> 
                         <div class="h3">
-                            <p>프론트엔드 리팩토링</p>
+                            <p>크롬 확장 프로그램 리팩토링</p>
                             <p>기간 : 2024.01 ~ 2024.02</p>
                         </div>
                         <div class="grid">
@@ -260,10 +259,10 @@
                                 </p>
                                 <ul class="indented">
                                     <li>
-                                        자바스크립트 언어에서 타입을 명시하는 것에 어려움을 겪었고, 주석으로 각 함수의 인자에 대한 타입을 표기했습니다.
+                                        서버를 제외하고 데이터는 크롬 스토리지 API 를 활용하여 저장했습니다.
                                     </li>
                                     <li>
-                                        유튜브에서 '뒤로가기' 시에 카드에 버튼이 추가되지 않는 현상 수정했습니다.
+                                        자바스크립트 언어에서 타입을 명시하는 것에 어려움을 겪었고, 주석으로 각 함수의 인자에 대한 타입을 표기했습니다.
                                     </li>
                                     <li>
                                         데이터 요청 응답시간으로 인한 네트워크 지연(대략 200ms) 없이 화면에 데이터를 보여주도록 수정했습니다.
@@ -284,7 +283,6 @@
                     <div class="flex-center">
                         <div class="h3">
                             <h3>개인 블로그</h3>
-                            <p>기간 : 2024.04 - 2024.04</p>
                         </div>
                         <div class="grid">
                             <div >
