--- a/resume/index.html
+++ b/resume/index.html
@@ -249,10 +249,13 @@
                             <p>기간 : 2024.01 ~ 2024.02</p>
                         </div>
                         <div class="grid">
-                            <div>
-                                <img class="ld" src="./image/watchmark.png" alt="watchmark">
-                                <img class="md" src="./image/watchmark-md.png" alt="watchmark">
+                            <div class="img_container">
+                                <div>
+                                    <img class="ld" src="./image/watchmark.png" alt="watchmark">
+                                    <img class="md" src="./image/watchmark-md.png" alt="watchmark">
+                                </div>
                             </div>
+                            
                             <div class="projects grow-3">
                                 <p>
                                     불필요한 기능을 제외하고 전체적인 구조를 개선했습니다.
@@ -285,7 +288,7 @@
                             <h3>개인 블로그</h3>
                         </div>
                         <div class="grid">
-                            <div >
+                            <div>
                                 <img class="ld" src="./image/archive.PNG" alt="fundamentals, HTML CSS Javscript">
                                 <img class="md" src="./image/archive-blog-md.png" alt="fundamentals, HTML CSS Javscript">
                             </div>
