--- a/resume/index.html
+++ b/resume/index.html
@@ -38,16 +38,12 @@
                                     <h4>HTML</h4>
                                     <ul>
                                         <li>
-                                            Semantic Markup
-                                        </li>
-                                        <li>
-                                            HTML5 Canvas
+                                            의미에 맞는 적절한 태그 부여
                                         </li>
                                         <li>
                                             웹 접근성에 대한 기본적인 이해
                                         </li>
                                     </ul>
-
                                 </li>
                                 <li class="grid-col-3-inner">
                                     <div class="flex-row">
@@ -67,13 +63,13 @@
                                     <h4>Javascript </h4>
                                     <ul>
                                         <li>
-                                            ES5, ES6
-                                        </li>
-                                        <li>
-                                            함수형 프로그래밍
-                                        </li>
-                                        <li>
                                             비동기 처리
+                                        </li>
+                                        <li>
+                                            Node.js - Express
+                                        </li>
+                                        <li>
+                                            Next.js
                                         </li>
                                     </ul>
                                 </li>
@@ -100,17 +96,6 @@
                                         </li>
                                         <li>
                                             Vercel
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="grid-col-3-inner">
-                                    <div class="flex-row">
-                                        <img src="./image/nodejs.png" class="icons" alt="nodejs">
-                                    </div>
-                                    <h4>Node.js</h4>
-                                    <ul>
-                                        <li>
-                                            Express
                                         </li>
                                     </ul>
                                 </li>
